Working version with bybit

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+__pycache__/
+*.pyc
+*.pyd
+*.pyo
+*.egg-info/
+.eggs/
+
+.env
+venv/
+env/
+
+.idea/
+.vscode/
+.DS_Store
+
+*.tmp
+*.log
+*.sqlite
+*.db
+
+.gemini/
+GEMINI.md
+
 *.zip
